fixed large size logo on safari

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ canvas {
 }
 
 .logo {
-	max-width: 40%;
+	max-width: 200px;
 	padding-top: 60px;
 	width: 500px;
 }
